# omnibot

./: .env.example  .gitignore  LICENSE  LICENSE.md  README.md  main.py  omnibot.txt  pyproject.toml
examples/broken_test/: test.py
omnibot/: __init__.py  main.py
omnibot/agents/: __init__.py  coder.py  reflex.py  researcher.py
omnibot/core/: __init__.py  agent_runtime.py  coordination_kernel.py  event_bus.py  memory_fabric.py  presence_layer.py  tool_bus.py
omnibot/models/: __init__.py  registry.py
omnibot/schemas/: __init__.py  events.py
omnibot/tests/: test_coherence.py  test_markdown_export.py  test_model_registry.py  test_tool_bus.py
omnibot/ui/: __init__.py  chat.py  dashboard.py
