[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omnibot"
version = "0.1.3"
description = "OmniBot v0.1.3 xAI default model"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20",
    "anyio>=4.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "sentence-transformers>=3.0",
    "gradio>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
omnibot = "omnibot.main:main"

[tool.pytest.ini_options]
testpaths = ["omnibot/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
