[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omnibot"
version = "0.1.9"
description = "OmniBot v0.1.9 markdown trace export"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.20",
    "anyio>=4.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6,<0.16",
]
embeddings = [
    "sentence-transformers>=3.0,<6.0",
]
gradio = [
    "gradio>=5.0,<6.0",
]

[project.scripts]
omnibot = "omnibot.main:main"

[tool.pytest.ini_options]
testpaths = ["omnibot/tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
